fix: hard delete optimization and removal of restore user
