# internal/modules/usermanagement/routes.go
@@ -1,19 +1,23 @@
 package usermanagement
 
-
 import (
 	"github.com/ALLAN-star-glitch/flownatty-backend/internal/modules/usermanagement/handler"
 	"github.com/gin-gonic/gin"
 )
 
 func RegisterUserManagementRoutes(
-	router *gin.RouterGroup,
-	userHandler *handler.UserHandler,
+    router *gin.RouterGroup,
+    userHandler *handler.UserHandler,
 ) {
-	// All routes are protected by admin middleware in main.go
-	user := router.Group("/users")
-	{
-		user.GET("", userHandler.GetAllUsers)
-		user.GET("/stats", userHandler.GetUserStats)
-	}
+    users := router.Group("/users")
+    {
+        users.GET("", userHandler.GetAllUsers)
+        users.GET("/stats", userHandler.GetUserStats)
+        users.GET("/:id", userHandler.GetUserByID)
+        users.PUT("/:id/role", userHandler.UpdateUserRole)
+        users.DELETE("/:id", userHandler.DeleteUser)
+        users.DELETE("/:id/hard", userHandler.HardDeleteUser)
+        users.PUT("/:id/suspend", userHandler.SuspendUser)
+        users.PUT("/:id/activate", userHandler.ActivateUser)
+    }
 }
